
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_buffer_xdr_mpi.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/debug.h DESTINATION include)				
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_event.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_system.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/explorationList.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_factory.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_exception.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_thread.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/request.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_factory_finder.h DESTINATION include)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_interface.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_utils.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/response.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/nodethread.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_raw.h DESTINATION include)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_list.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_combox_uds.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/POPString.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_raw_factory.h DESTINATION include)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_memspool.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_logger.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/sysinfodef.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_accesspoint.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_utils.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_mutex.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/timer.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_allocobj.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_xdr.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_object.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popc_search_node_info.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_array.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_buffer_xdr_factory.h DESTINATION include)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_od.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_base.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox.h DESTINATION include)			
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_broker.h	 DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox_factory.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_string.h	 DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/popwayback.h DESTINATION include)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_broker_factory.h	DESTINATION include)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_combox_socket.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/paroc_sys.h DESTINATION include)		
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/priolist.h DESTINATION include)
